[gd_scene load_steps=17 format=3 uid="uid://is10mdur3ji3"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_6lepd"]
[ext_resource type="Script" path="res://scripts/BackgroundImage.gd" id="2_ofewi"]
[ext_resource type="Script" path="res://scripts/CurrentMap.gd" id="3_5ymtw"]
[ext_resource type="Script" path="res://scripts/UI.gd" id="4_ic70x"]
[ext_resource type="Texture2D" uid="uid://bb138lfr3njuc" path="res://icons/plus-symbol-button.png" id="5_ffa7n"]
[ext_resource type="Texture2D" uid="uid://1epqkpe6k7vp" path="res://icons/minus.png" id="6_8hjok"]
[ext_resource type="Texture2D" uid="uid://5buddtq45ifg" path="res://icons/zoom-out.png" id="7_cuqij"]
[ext_resource type="Texture2D" uid="uid://ce3d7utrtfjyl" path="res://icons/zoom-in.png" id="8_5q1jl"]
[ext_resource type="Script" path="res://scripts/Sidebar.gd" id="9_dla7g"]
[ext_resource type="Texture2D" uid="uid://bpapf4k5c40yk" path="res://icons/list.png" id="10_u2kvv"]
[ext_resource type="Texture2D" uid="uid://b2r8qs1i8enqx" path="res://icons/link.png" id="11_drgk7"]
[ext_resource type="Texture2D" uid="uid://c316k31a3ivps" path="res://icons/dice-d20.png" id="12_2uiwi"]
[ext_resource type="Script" path="res://scripts/ConfigRW.gd" id="13_2wtbb"]
[ext_resource type="Script" path="res://scripts/State.gd" id="14_cvhfb"]
[ext_resource type="Script" path="res://scripts/ResourceManager.gd" id="15_0np3i"]
[ext_resource type="Script" path="res://scripts/NetworkManager.gd" id="16_h1hr4"]

[node name="Main" type="Node2D" node_paths=PackedStringArray("TokenHolder", "ResourceManager", "State")]
script = ExtResource("1_6lepd")
TokenHolder = NodePath("CurrentMap/Tokens")
ResourceManager = NodePath("ResourceManager")
State = NodePath("State")
TokenScene = "scenes/token.tscn"

[node name="BackgroundImage" type="Sprite2D" parent="." node_paths=PackedStringArray("ResourceManager")]
z_index = -2
position = Vector2(574, 354)
scale = Vector2(0.59, 0.59)
script = ExtResource("2_ofewi")
ResourceManager = NodePath("../ResourceManager")

[node name="CurrentMap" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(807, 453)
scale = Vector2(0.373698, 0.373698)
script = ExtResource("3_5ymtw")

[node name="Tokens" type="Node2D" parent="CurrentMap"]
position = Vector2(-1506.56, -832.223)
scale = Vector2(2.67596, 2.67596)

[node name="UI" type="Node2D" parent="." node_paths=PackedStringArray("ConfigRW", "ResourceManager", "MapDisplay", "State")]
script = ExtResource("4_ic70x")
ConfigRW = NodePath("../ConfigRW")
ResourceManager = NodePath("../ResourceManager")
MapDisplay = NodePath("../CurrentMap")
State = NodePath("../State")

[node name="NextButton" type="Button" parent="UI"]
offset_left = 159.0
offset_top = 19.0
offset_right = 214.0
offset_bottom = 50.0
scale = Vector2(1.25, 1.25)
text = "Next"
metadata/_edit_use_anchors_ = true

[node name="MapSelector" type="OptionButton" parent="UI"]
offset_left = 268.0
offset_top = 17.0
offset_right = 628.0
offset_bottom = 52.0
scale = Vector2(1.25, 1.25)
text_overrun_behavior = 3
expand_icon = true
item_count = 1
selected = 0
allow_reselect = true
popup/item_0/text = "Empty"
popup/item_0/id = 0
metadata/_edit_use_anchors_ = true

[node name="MapZoomIn" type="Button" parent="UI/MapSelector"]
layout_mode = 0
offset_left = 379.0
offset_top = 5.0
offset_right = 899.0
offset_bottom = 525.0
scale = Vector2(0.05, 0.05)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0.686275)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0.686275)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0.686275)
icon = ExtResource("5_ffa7n")
flat = true
metadata/_edit_use_anchors_ = true

[node name="MapZoomOut" type="Button" parent="UI/MapSelector"]
layout_mode = 0
offset_left = 420.95
offset_top = 5.25
offset_right = 940.95
offset_bottom = 525.25
scale = Vector2(0.05, 0.05)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0.745098)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0.745098)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0.745098)
icon = ExtResource("6_8hjok")
flat = true
metadata/_edit_use_anchors_ = true

[node name="TurnOrderSelector" type="MenuButton" parent="UI"]
offset_left = 20.0
offset_top = 19.0
offset_right = 120.0
offset_bottom = 50.0
scale = Vector2(1.25, 1.25)
text = "Turn Order"
flat = false
metadata/_edit_use_anchors_ = true

[node name="Notif" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 617.0
offset_right = 529.0
offset_bottom = 643.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ZoomOutButton" type="Button" parent="UI"]
offset_left = 32.0
offset_top = 598.0
offset_right = 552.0
offset_bottom = 1118.0
scale = Vector2(0.1, 0.1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0.67451)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0.65098)
icon = ExtResource("7_cuqij")
flat = true
metadata/_edit_use_anchors_ = true

[node name="ZoomInButton" type="Button" parent="UI"]
offset_left = 27.0
offset_top = 524.0
offset_right = 547.0
offset_bottom = 1044.0
scale = Vector2(0.12, 0.12)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0.67451)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0.65098)
icon = ExtResource("8_5q1jl")
flat = true
metadata/_edit_use_anchors_ = true

[node name="Sidebar" type="Node2D" parent="UI" node_paths=PackedStringArray("State")]
position = Vector2(0, 72)
script = ExtResource("9_dla7g")
State = NodePath("../../State")

[node name="AddButton" type="Button" parent="UI/Sidebar"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 68.0
offset_right = 544.0
offset_bottom = 588.0
grow_vertical = 0
scale = Vector2(0.12, 0.12)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0.627451)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0.627451)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0.627451)
icon = ExtResource("5_ffa7n")
flat = true
metadata/_edit_use_anchors_ = true

[node name="InitiativeButton" type="Button" parent="UI/Sidebar"]
offset_left = 27.0
offset_top = 233.0
offset_right = 547.0
offset_bottom = 753.0
scale = Vector2(0.12, 0.12)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0.627451)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0.627451)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0.627451)
icon = ExtResource("10_u2kvv")
flat = true
metadata/_edit_use_anchors_ = true

[node name="ConnectButton" type="Button" parent="UI/Sidebar"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 153.0
offset_right = 544.0
offset_bottom = 673.0
grow_vertical = 0
scale = Vector2(0.12, 0.12)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0.627451)
theme_override_colors/icon_pressed_color = Color(0.321569, 0.329412, 0.333333, 0.627451)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0.627451)
icon = ExtResource("11_drgk7")
flat = true
metadata/_edit_use_anchors_ = true

[node name="DiceRollButton" type="MenuButton" parent="UI/Sidebar"]
modulate = Color(1, 1, 1, 0.705882)
offset_left = 25.0
offset_top = 315.0
offset_right = 545.0
offset_bottom = 835.0
scale = Vector2(0.12, 0.12)
icon = ExtResource("12_2uiwi")
metadata/_edit_use_anchors_ = true

[node name="DieResult" type="RichTextLabel" parent="UI/Sidebar/DiceRollButton"]
layout_mode = 0
offset_left = 675.0
offset_top = 50.0
offset_right = 720.0
offset_bottom = 94.0
scale = Vector2(10, 10)
theme_override_font_sizes/normal_font_size = 29
theme_override_font_sizes/bold_font_size = 0
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[node name="ConfigRW" type="Node" parent="." node_paths=PackedStringArray("BackgroundImage", "State", "ResourceManager", "UI", "NetworkManager")]
script = ExtResource("13_2wtbb")
BackgroundImage = NodePath("../BackgroundImage")
State = NodePath("../State")
ResourceManager = NodePath("../ResourceManager")
UI = NodePath("../UI")
NetworkManager = NodePath("../NetworkManager")

[node name="State" type="Node" parent="." node_paths=PackedStringArray("Main", "ConfigRW")]
script = ExtResource("14_cvhfb")
Main = NodePath("..")
ConfigRW = NodePath("../ConfigRW")

[node name="ResourceManager" type="Node" parent="." node_paths=PackedStringArray("State", "NetworkManager")]
script = ExtResource("15_0np3i")
State = NodePath("../State")
NetworkManager = NodePath("../NetworkManager")

[node name="NetworkManager" type="Node" parent="." node_paths=PackedStringArray("State", "ResourceManager")]
script = ExtResource("16_h1hr4")
State = NodePath("../State")
ResourceManager = NodePath("../ResourceManager")
